Update website files and add fonts

--- a/credit.html
+++ b/credit.html
@@ -57,14 +57,6 @@
           </div>
         </div>
       
-        <div class="credit-item">
-          <div class="credit-content">
-            <h3 class="credit-title">源ノ角ゴシック</h3>
-            <p class="credit-author">Adobe、Google</p>
-            <p class="credit-description">使用箇所:小見出し、本文</p>
-            <a href="https://github.com/adobe-fonts/source-han-sans/" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
-          </div>
-        </div>
       </div>
     </section>
       <p>　</p>
@@ -132,15 +124,118 @@
       <h2>その他のツール・ライブラリ</h2>
       <div class="credit-list">
 
-        <h3>ゲーム開発</h3>
+                <h3>予約システム制作</h3>
+
         <div class="credit-item">
-          <div class="credit-content">
-            <h3 class="credit-title">ツール/ライブラリ名</h3>
-            <p class="credit-author">制作者名</p>
-            <p class="credit-description">使用箇所: 説明</p>
-            <a href="https://example.com" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
-          </div>
-        </div>
+  <div class="credit-content">
+    <h3 class="credit-title">Next.js</h3>
+    <p class="credit-author">Vercel</p>
+    <p class="credit-description">React ベースのフルスタック Web フレームワーク</p>
+    <a href="https://nextjs.org/" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
+    <!-- 使用箇所: -->
+  </div>
+</div>
+
+<div class="credit-item">
+  <div class="credit-content">
+    <h3 class="credit-title">Hono</h3>
+    <p class="credit-author">Yusuke Wada</p>
+    <p class="credit-description">軽量で高速、エッジランタイム対応の Web フレームワーク</p>
+    <a href="https://hono.dev/" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
+  </div>
+</div>
+
+<div class="credit-item">
+  <div class="credit-content">
+    <h3 class="credit-title">Zod</h3>
+    <p class="credit-author">Colin McDonnell</p>
+    <p class="credit-description">TypeScript ファーストなスキーマバリデーションライブラリ</p>
+    <a href="https://zod.dev/" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
+  </div>
+</div>
+
+<div class="credit-item">
+  <div class="credit-content">
+    <h3 class="credit-title">Prisma</h3>
+    <p class="credit-author">Prisma Team</p>
+    <p class="credit-description">次世代の TypeScript ORM</p>
+    <a href="https://www.prisma.io/" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
+  </div>
+</div>
+
+<div class="credit-item">
+  <div class="credit-content">
+    <h3 class="credit-title">NextAuth.js</h3>
+    <p class="credit-author">Iain Collins and NextAuth.js contributors</p>
+    <p class="credit-description">Next.js 用の認証ライブラリ</p>
+    <a href="https://next-auth.js.org/" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
+  </div>
+</div>
+
+<div class="credit-item">
+  <div class="credit-content">
+    <h3 class="credit-title">React & React DOM</h3>
+    <p class="credit-author">Facebook Inc.</p>
+    <p class="credit-description">ユーザーインターフェース構築のための JavaScript ライブラリ</p>
+    <a href="https://reactjs.org/" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
+  </div>
+</div>
+
+<div class="credit-item">
+  <div class="credit-content">
+    <h3 class="credit-title">LINE LIFF SDK</h3>
+    <p class="credit-author">LINE Corporation</p>
+    <p class="credit-description">LINE アプリ内で動作するウェブアプリケーション開発用 SDK</p>
+    <a href="https://developers.line.biz/ja/docs/liff/" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
+  </div>
+</div>
+
+<!-- 開発依存関係 -->
+
+<div class="credit-item">
+  <div class="credit-content">
+    <h3 class="credit-title">TypeScript</h3>
+    <p class="credit-author">Microsoft</p>
+    <p class="credit-description">JavaScript に静的型付けを追加した言語</p>
+    <a href="https://www.typescriptlang.org/" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
+  </div>
+</div>
+
+<div class="credit-item">
+  <div class="credit-content">
+    <h3 class="credit-title">Tailwind CSS</h3>
+    <p class="credit-author">Adam Wathan, Jonathan Reinink, David Hemphill, Steve Schoger</p>
+    <p class="credit-description">ユーティリティファーストの CSS フレームワーク</p>
+    <a href="https://tailwindcss.com/" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
+  </div>
+</div>
+
+<div class="credit-item">
+  <div class="credit-content">
+    <h3 class="credit-title">ESLint</h3>
+    <p class="credit-author">Nicholas C. Zakas</p>
+    <p class="credit-description">JavaScript と TypeScript の静的解析ツール</p>
+    <a href="https://eslint.org/" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
+  </div>
+</div>
+
+<div class="credit-item">
+  <div class="credit-content">
+    <h3 class="credit-title">Prisma ERD Generator</h3>
+    <p class="credit-author">John Keonik</p>
+    <p class="credit-description">Prisma スキーマから ER 図を生成するツール</p>
+    <a href="https://github.com/keonik/prisma-erd-generator" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
+  </div>
+</div>
+
+<div class="credit-item">
+  <div class="credit-content">
+    <h3 class="credit-title">Mermaid CLI</h3>
+    <p class="credit-author">Knut Sveidqvist and Mermaid contributors</p>
+    <p class="credit-description">マークダウンライクなシンタックスで図表を生成するツール</p>
+    <a href="https://mermaid.js.org/" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
+  </div>
+</div>
 
 
         <h3>ホームページ制作</h3>
