--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="image-container">
     <img src="./assets/img/dammy.jpg">
     </div>
-        <p>ティザー映像</p>
+        <p>トレーラー映像</p>
     <p>　</p>
     <p>　</p>
     <p>　</p>
