--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./assets/css/page/style_index.css">
 </head>
 <body>
+  
   <div id="header"></div>
   <div data-include="partials/header.html"></div>
 
@@ -137,15 +138,15 @@
     <p>&copy; 2025 こうよう祭　2Iクラス展示</p>
   </footer>
 
-    <div data-include="partials/line-banner.html"></div>
-
-    <!-- コマンドライン背景 -->
-  <div data-include="partials/terminal.html"></div>
+  <div data-include="partials/line-banner.html"></div>
 
   <script src="./assets/js/line-banner.js"></script>
   <script src="./assets/js/include.js"></script>
   <script src="./assets/js/menu.js"></script>
 
+  <div class="terminal-background" id="terminal"></div>
+  <script src="assets/js/terminal.js"></script>
+</body>
 
 
   
