--- a/story.html
+++ b/story.html
@@ -70,8 +70,8 @@
 
   <div data-include="partials/line-banner.html"></div>
 
-      <!-- コマンドライン背景 -->
-  <div data-include="partials/terminal.html"></div>
+  <div class="terminal-background" id="terminal"></div>
+  <script src="assets/js/terminal.js"></script>
   
   <script src="./assets/js/line-banner.js"></script>
   <script src="./assets/js/include.js"></script>
