Add GitHub Pages workflow for cloud runner

--- a/play.html
+++ b/play.html
@@ -15,20 +15,46 @@
     <h1>FOR PLAYERS</h1>
     <p>ゲームの遊び方と注意事項について説明しています。</p>
     <p>　</p>
-    <h2>ゲームシステム</h2>
+    <h2>遊び方</h2>
     <p>サンプルテキスト</p>
     <p>サンプルテキスト</p>
 <div class="image-container">
   <img src="./assets/img/dammy.jpg">
 </div>
     <p>　</p>
-
+    <p>　</p>
+        <p>　</p>
     <h2>注意とお願い</h2>
     <p>サンプルテキスト</p>
     <p>サンプルテキスト</p>
 <div class="image-container">
   <img src="./assets/img/dammy.jpg">
 </div>
+    <p>　</p>
+     <p>　</p>
+         <p>　</p>   
+
+        <h2>敵キャラたちと倒し方</h2>
+    <p>ゲームに登場する敵キャラとその倒し方です</p>
+    <p>　</p>
+            <h3>敵キャラ1</h3>
+    <p>サンプルテキスト</p>
+<div class="image-container">
+  <img src="./assets/img/dammy.jpg">
+</div>
+    <p>　</p>
+                <h3>敵キャラ2</h3>
+    <p>サンプルテキスト</p>
+<div class="image-container">
+  <img src="./assets/img/dammy.jpg">
+</div>
+    <p>　</p>
+                <h3>敵キャラ3</h3>
+    <p>サンプルテキスト</p>
+<div class="image-container">
+  <img src="./assets/img/dammy.jpg">
+</div>
+    <p>　</p>
   </main>
 
   <footer>
