--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     <p>　</p>
     <p>　</p>
     <p>　</p>
-    <p>　</p>
 
         <h1>MOVIE</h1>
 
@@ -48,14 +47,15 @@
     <p>　</p>
     <p>　</p>
     <p>　</p>
-    <p>　</p>
 
-    <h1>MAP</h1>
+    <h1>ACCESS</h1>
     <p>豊田高専の場所です。</p>
-<div class="map-container">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d290.3678426731656!2d137.1481380561982!3d35.10370228142536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60035ff72efd9e9f%3A0x9f9d0a6f9e3595be!2z6LGK55Sw5bel5qWt6auY562J5bCC6ZaA5a2m5qCh5oOF5aCx5bel5a2m56eR!5e0!3m2!1sja!2sjp!4v1759575518346!5m2!1sja!2sjp" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
-    <p>　</p>
+
+    <p>2I教室への詳しい行き方は「ACCESS」ページに記載</p>
+
+    <nav class="main-nav">
+      <a href="access.html" class="btn">ACCESS</a>
+    </nav>
     <p>　</p>
     <p>　</p>
     <p>　</p>
@@ -69,7 +69,6 @@
     <nav class="main-nav">
       <a href="story.html" class="btn">STORY</a>
     </nav>
-    <p>　</p>
     <p>　</p>
     <p>　</p>
     <p>　</p>
@@ -89,7 +88,6 @@
     <p>　</p>
     <p>　</p>
     <p>　</p>
-    <p>　</p>
 
 
 
@@ -99,7 +97,6 @@
     <nav class="main-nav">
       <a href="credit.html" class="btn">CREDITS</a>
     </nav>
-    <p>　</p>
     <p>　</p>
     <p>　</p>
     <p>　</p>
@@ -126,7 +123,6 @@
       公式Instagram
     </a>
   </div>
-    <p>　</p>
     <p>　</p>
     <p>　</p>
     <p>　</p>
