Add GitHub Pages workflow for cloud runner

--- a/credit.html
+++ b/credit.html
@@ -57,6 +57,14 @@
             <a href="https://moji-waku.com/makinas/index.html" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
           </div>
         </div>
+        <div class="credit-item">
+          <div class="credit-content">
+            <h3 class="credit-title">スマートフォントUI</h3>
+            <p class="credit-author">フロップデザイン</p>
+            <p class="credit-description">使用箇所:本文</p>
+            <a href="https://moji-waku.com/makinas/index.html" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
+          </div>
+        </div>
       
       </div>
     </section>
