Add GitHub Pages workflow for cloud runner

--- a/play.html
+++ b/play.html
@@ -37,24 +37,172 @@
         <h2>敵キャラたちと倒し方</h2>
     <p>ゲームに登場する敵キャラとその倒し方です</p>
     <p>　</p>
-            <h3>敵キャラ1</h3>
-    <p>サンプルテキスト</p>
+            <h3>雑魚敵</h3>
 <div class="image-container">
   <img src="./assets/img/dammy.jpg">
 </div>
+    <p>最も多く出現する、一番弱い敵。</p>
+    <p>集団で向かってくるので油断は禁物。</p>
+<table class="credit-table">
+  <tr>
+      <tr>
+    <td>強さレベル</td>
+    <td><span class="stars">★☆☆☆☆</span></td>
+  </tr>
+    <td>登場ステージ</td>
+    <td>すべてのステージ</td>
+  </tr>
+  <tr>
+    <td>必要HIT数</td>
+    <td>1回</td>
+  </tr>
+  <tr>
+    <td>獲得スコア</td>
+    <td class="score-positive">100p</td>
+  </tr>
+
+  <tr>
+    <td>被弾ダメージ</td>
+    <td class="score-negative">-50p</td>
+  </tr>
+</table>
     <p>　</p>
-                <h3>敵キャラ2</h3>
-    <p>サンプルテキスト</p>
+        <p>　</p>
+            <h3>特殊敵</h3>
 <div class="image-container">
   <img src="./assets/img/dammy.jpg">
 </div>
+    <p>攻撃するたびに色が変わり、軌道も変化。</p>
+    <p>3回弾がHITすると撃破できる。</p>
+    <p>雑魚敵よりポイントが高いため、積極的に狙おう。</p>
+<table class="credit-table">
+  <tr>
+      <tr>
+    <td>強さレベル</td>
+    <td><span class="stars">★★☆☆☆</span></td>
+  </tr>
+    <td>登場ステージ</td>
+    <td>ステージ2　以降</td>
+  </tr>
+  <tr>
+    <td>必要HIT数</td>
+    <td>3回</td>
+  </tr>
+  <tr>
+    <td>獲得スコア</td>
+    <td class="score-positive">200p</td>
+  </tr>
+
+  <tr>
+    <td>被弾ダメージ</td>
+    <td class="score-negative">-50p</td>
+  </tr>
+</table>
     <p>　</p>
-                <h3>敵キャラ3</h3>
-    <p>サンプルテキスト</p>
+        <p>　</p>
+
+           <h3>レア敵</h3>
 <div class="image-container">
   <img src="./assets/img/dammy.jpg">
 </div>
+    <p>遠くを高速で飛んでいる敵。金色に光っている。</p>
+    <p>弾を当てるのは難しいが、獲得ポイントも多い。</p>
+        <p>頑張って狙ってみよう。</p>
+<table class="credit-table">
+  <tr>
+      <tr>
+    <td>強さレベル</td>
+    <td><span class="stars">★★★☆☆</span></td>
+  </tr>
+    <td>登場ステージ</td>
+    <td>すべてのステージ</td>
+  </tr>
+  <tr>
+    <td>必要HIT数</td>
+    <td>1回</td>
+  </tr>
+  <tr>
+    <td>獲得スコア</td>
+    <td class="score-positive">300p</td>
+  </tr>
+
+  <tr>
+    <td>被弾ダメージ</td>
+    <td class="score-negative">なし</td>
+  </tr>
+</table>
     <p>　</p>
+        <p>　</p>
+
+           <h3>中ボス</h3>
+<div class="image-container">
+  <img src="./assets/img/dammy.jpg">
+</div>
+    <p>中盤に登場するボス敵。</p>
+    <p>雑魚敵を巨大化したような形で、なんだか強そうなオーラを放っている。</p>
+    <p>突進攻撃に注意。弾を当てて攻撃をキャンセルしよう。</p>
+<table class="credit-table">
+  <tr>
+      <tr>
+    <td>強さレベル</td>
+    <td><span class="stars">★★★★☆</span></td>
+  </tr>
+    <td>登場ステージ</td>
+    <td>ステージ2</td>
+  </tr>
+  <tr>
+    <td>必要HIT数</td>
+    <td>プレイヤー数　×10回</td>
+  </tr>
+  <tr>
+    <td>獲得スコア</td>
+    <td class="score-positive">3000p</td>
+  </tr>
+  <tr>
+    <td>被弾ダメージ</td>
+    <td class="score-negative">-50p</td>
+  </tr>
+</table>
+    <p>　</p>
+        <p>　</p>
+
+
+  <h3>ラスボス（niAIコア）</h3>
+<div class="image-container">
+  <img src="./assets/img/dammy.jpg">
+</div>
+    <p>このゲームのラスボスであり、諸悪の根源。</p>
+    <p>雑魚敵を召喚するうえ、それらを倒しきらないと本体に攻撃できない。</p>
+    <p>弱点に弾を当てると大ダメージを与えられる。</p>
+<table class="credit-table">
+  <tr>
+      <tr>
+    <td>強さレベル</td>
+    <td><span class="stars">★★★★★</span></td>
+  </tr>
+    <td>登場ステージ</td>
+    <td>ステージ3</td>
+  </tr>
+  <tr>
+    <td>必要HIT数</td>
+    <td>プレイヤー数　×15回</td>
+  </tr>
+  <tr>
+    <td>獲得スコア</td>
+    <td class="score-positive">10000p　+　残り時間（秒）×50p</td>
+  </tr>
+  <tr>
+    <td>被弾ダメージ</td>
+    <td class="score-negative">-50p</td>
+  </tr>
+</table>
+    <p>　</p>
+        <p>　</p>
+
+
+
+
+
   </main>
 
   <footer>
