Add GitHub Pages workflow for cloud runner

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <p>　</p>
 
     <h1>ACCESS</h1>
-    <p>豊田高専の場所です。</p>
+    <p>豊田高専と2I教室の場所です。</p>
 
-    <p>2I教室への詳しい行き方は「ACCESS」ページに記載</p>
+    <p>詳しくは「ACCESS」ページに写真付きで記載しています。</p>
 
     <nav class="main-nav">
       <a href="access.html" class="btn">ACCESS</a>
@@ -64,7 +64,8 @@
 
         <h1>STORY</h1>
     <h2>暴走したAIを食い止めろ。</h2>
-    <p>時は30XX年。未来の豊田高専では人間の顔がついたAI“niAI”が暴走した。</p>
+    <p>時は30XX年。</p>
+    <p></p>未来の豊田高専では人間の顔がついたAI、“niAI”が暴走していた。</p>
     <p>諸君、世界を守るため戦うのだ。</p>
     <nav class="main-nav">
       <a href="story.html" class="btn">STORY</a>
@@ -78,7 +79,8 @@
 
     <h1>FOR PLAYERS</h1>
     <h2>遊び方と注意事項</h2>
-    <p>ゲームの遊び方と注意事項について説明しています。</p>
+    <p>ゲームの遊び方と注意事項、登場する敵キャラについて説明しています
+      。</p>
     <p>ハイスコアのコツも書いてあるかも…</p>
     <nav class="main-nav">
       <a href="play.html" class="btn">FOR PLAYERS</a>
