Add GitHub Pages workflow for cloud runner

--- a/play.html
+++ b/play.html
@@ -39,9 +39,10 @@
     <p>　</p>
             <h3>雑魚敵</h3>
 <div class="image-container">
-  <img src="./assets/img/dammy.jpg">
+  <img src="assets\img\enemy\1013blueenemy_0.png">
 </div>
     <p>最も多く出現する、一番弱い敵。</p>
+    <p>機体の色によって移動パターンが変わるので注意。</p>
     <p>集団で向かってくるので油断は禁物。</p>
 <table class="credit-table">
   <tr>
@@ -70,11 +71,11 @@
         <p>　</p>
             <h3>特殊敵</h3>
 <div class="image-container">
-  <img src="./assets/img/dammy.jpg">
+  <img src="assets\img\enemy\1013zakoenemy_0.png">
 </div>
-    <p>攻撃するたびに色が変わり、軌道も変化。</p>
-    <p>3回弾がHITすると撃破できる。</p>
-    <p>雑魚敵よりポイントが高いため、積極的に狙おう。</p>
+    <p>攻撃するたびに色が変わり、移動パターンも変化。</p>
+    <p>弾を3回当てると撃破できる。</p>
+    <p>雑魚敵より撃破ポイントがやや高い。</p>
 <table class="credit-table">
   <tr>
       <tr>
@@ -103,11 +104,11 @@
 
            <h3>レア敵</h3>
 <div class="image-container">
-  <img src="./assets/img/dammy.jpg">
+  <img src="assets\img\enemy\1014rareenemy_0.png">
 </div>
     <p>遠くを高速で飛んでいる敵。金色に光っている。</p>
     <p>弾を当てるのは難しいが、獲得ポイントも多い。</p>
-        <p>頑張って狙ってみよう。</p>
+    <p>見つけたら積極的に狙おう。</p>
 <table class="credit-table">
   <tr>
       <tr>
@@ -136,10 +137,10 @@
 
            <h3>中ボス</h3>
 <div class="image-container">
-  <img src="./assets/img/dammy.jpg">
+  <img src="assets\img\enemy\1013tyuboss_0.png">
 </div>
     <p>中盤に登場するボス敵。</p>
-    <p>雑魚敵を巨大化したような形で、なんだか強そうなオーラを放っている。</p>
+    <p>雑魚敵を巨大化したような見た目。なんだか強そうなオーラを放っている。</p>
     <p>突進攻撃に注意。弾を当てて攻撃をキャンセルしよう。</p>
 <table class="credit-table">
   <tr>
