--- a/play.html
+++ b/play.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FOR PLAYERS</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
   <div id="header"></div>
-<div data-include="partials/header.html"></div>
+  <div data-include="partials/header.html"></div>
 
   <main>
 
@@ -18,187 +20,187 @@
     <h2>遊び方</h2>
     <p>サンプルテキスト</p>
     <p>サンプルテキスト</p>
-<div class="image-container">
-  <img src="./assets/img/dammy.jpg">
-</div>
+    <div class="image-container">
+      <img src="./assets/img/dammy.jpg">
+    </div>
     <p>　</p>
     <p>　</p>
-        <p>　</p>
+    <p>　</p>
     <h2>注意とお願い</h2>
     <p>サンプルテキスト</p>
     <p>サンプルテキスト</p>
-<div class="image-container">
-  <img src="./assets/img/dammy.jpg">
-</div>
+    <div class="image-container">
+      <img src="./assets/img/dammy.jpg">
+    </div>
     <p>　</p>
-     <p>　</p>
-         <p>　</p>   
+    <p>　</p>
+    <p>　</p>
 
-        <h2>敵キャラたちと倒し方</h2>
+    <h2>敵キャラたちと倒し方</h2>
     <p>ゲームに登場する敵キャラとその倒し方です</p>
     <p>　</p>
-            <h3>雑魚敵</h3>
-<div class="image-container">
-  <img src="assets\img\enemy\1013blueenemy_0.png">
-</div>
+    <h3>雑魚敵</h3>
+    <div class="image-container">
+      <img src="assets\img\enemy\1013blueenemy_0.png">
+    </div>
     <p>最も多く出現する、一番弱い敵。</p>
     <p>機体の色によって移動パターンが変わるので注意。</p>
     <p>集団で向かってくるので油断は禁物。</p>
-<table class="credit-table">
-  <tr>
+    <table class="credit-table">
       <tr>
-    <td>強さレベル</td>
-    <td><span class="stars">★☆☆☆☆</span></td>
-  </tr>
-    <td>登場ステージ</td>
-    <td>すべてのステージ</td>
-  </tr>
-  <tr>
-    <td>必要HIT数</td>
-    <td>1回</td>
-  </tr>
-  <tr>
-    <td>獲得スコア</td>
-    <td class="score-positive">100p</td>
-  </tr>
+      <tr>
+        <td>強さレベル</td>
+        <td><span class="stars">★☆☆☆☆</span></td>
+      </tr>
+      <td>登場ステージ</td>
+      <td>すべてのステージ</td>
+      </tr>
+      <tr>
+        <td>必要HIT数</td>
+        <td>1回</td>
+      </tr>
+      <tr>
+        <td>獲得スコア</td>
+        <td class="score-positive">100p</td>
+      </tr>
 
-  <tr>
-    <td>被弾ダメージ</td>
-    <td class="score-negative">-50p</td>
-  </tr>
-</table>
+      <tr>
+        <td>被弾ダメージ</td>
+        <td class="score-negative">-50p</td>
+      </tr>
+    </table>
     <p>　</p>
-        <p>　</p>
-            <h3>特殊敵</h3>
-<div class="image-container">
-  <img src="assets\img\enemy\1013zakoenemy_0.png">
-</div>
+    <p>　</p>
+    <h3>特殊敵</h3>
+    <div class="image-container">
+      <img src="assets\img\enemy\1013zakoenemy_0.png">
+    </div>
     <p>攻撃するたびに色が変わり、移動パターンも変化。</p>
     <p>弾を3回当てると撃破できる。</p>
     <p>雑魚敵より撃破ポイントがやや高い。</p>
-<table class="credit-table">
-  <tr>
+    <table class="credit-table">
       <tr>
-    <td>強さレベル</td>
-    <td><span class="stars">★★☆☆☆</span></td>
-  </tr>
-    <td>登場ステージ</td>
-    <td>ステージ2　以降</td>
-  </tr>
-  <tr>
-    <td>必要HIT数</td>
-    <td>3回</td>
-  </tr>
-  <tr>
-    <td>獲得スコア</td>
-    <td class="score-positive">200p</td>
-  </tr>
+      <tr>
+        <td>強さレベル</td>
+        <td><span class="stars">★★☆☆☆</span></td>
+      </tr>
+      <td>登場ステージ</td>
+      <td>ステージ2　以降</td>
+      </tr>
+      <tr>
+        <td>必要HIT数</td>
+        <td>3回</td>
+      </tr>
+      <tr>
+        <td>獲得スコア</td>
+        <td class="score-positive">200p</td>
+      </tr>
 
-  <tr>
-    <td>被弾ダメージ</td>
-    <td class="score-negative">-50p</td>
-  </tr>
-</table>
+      <tr>
+        <td>被弾ダメージ</td>
+        <td class="score-negative">-50p</td>
+      </tr>
+    </table>
     <p>　</p>
-        <p>　</p>
+    <p>　</p>
 
-           <h3>レア敵</h3>
-<div class="image-container">
-  <img src="assets\img\enemy\1014rareenemy_0.png">
-</div>
+    <h3>レア敵</h3>
+    <div class="image-container">
+      <img src="assets\img\enemy\1014rareenemy_0.png">
+    </div>
     <p>遠くを高速で飛んでいる敵。金色に光っている。</p>
     <p>弾を当てるのは難しいが、獲得ポイントも多い。</p>
     <p>見つけたら積極的に狙おう。</p>
-<table class="credit-table">
-  <tr>
+    <table class="credit-table">
       <tr>
-    <td>強さレベル</td>
-    <td><span class="stars">★★★☆☆</span></td>
-  </tr>
-    <td>登場ステージ</td>
-    <td>すべてのステージ</td>
-  </tr>
-  <tr>
-    <td>必要HIT数</td>
-    <td>1回</td>
-  </tr>
-  <tr>
-    <td>獲得スコア</td>
-    <td class="score-positive">300p</td>
-  </tr>
+      <tr>
+        <td>強さレベル</td>
+        <td><span class="stars">★★★☆☆</span></td>
+      </tr>
+      <td>登場ステージ</td>
+      <td>すべてのステージ</td>
+      </tr>
+      <tr>
+        <td>必要HIT数</td>
+        <td>1回</td>
+      </tr>
+      <tr>
+        <td>獲得スコア</td>
+        <td class="score-positive">300p</td>
+      </tr>
 
-  <tr>
-    <td>被弾ダメージ</td>
-    <td class="score-negative">なし</td>
-  </tr>
-</table>
+      <tr>
+        <td>被弾ダメージ</td>
+        <td class="score-negative">なし</td>
+      </tr>
+    </table>
     <p>　</p>
-        <p>　</p>
+    <p>　</p>
 
-           <h3>中ボス</h3>
-<div class="image-container">
-  <img src="assets\img\enemy\1013tyuboss_0.png">
-</div>
+    <h3>中ボス</h3>
+    <div class="image-container">
+      <img src="assets\img\enemy\1013tyuboss_0.png">
+    </div>
     <p>中盤に登場するボス敵。</p>
     <p>雑魚敵を巨大化したような見た目。なんだか強そうなオーラを放っている。</p>
     <p>突進攻撃に注意。弾を当てて攻撃をキャンセルしよう。</p>
-<table class="credit-table">
-  <tr>
+    <table class="credit-table">
       <tr>
-    <td>強さレベル</td>
-    <td><span class="stars">★★★★☆</span></td>
-  </tr>
-    <td>登場ステージ</td>
-    <td>ステージ2</td>
-  </tr>
-  <tr>
-    <td>必要HIT数</td>
-    <td>プレイヤー数　×10回</td>
-  </tr>
-  <tr>
-    <td>獲得スコア</td>
-    <td class="score-positive">3000p</td>
-  </tr>
-  <tr>
-    <td>被弾ダメージ</td>
-    <td class="score-negative">-50p</td>
-  </tr>
-</table>
+      <tr>
+        <td>強さレベル</td>
+        <td><span class="stars">★★★★☆</span></td>
+      </tr>
+      <td>登場ステージ</td>
+      <td>ステージ2</td>
+      </tr>
+      <tr>
+        <td>必要HIT数</td>
+        <td>プレイヤー数　×10回</td>
+      </tr>
+      <tr>
+        <td>獲得スコア</td>
+        <td class="score-positive">3000p</td>
+      </tr>
+      <tr>
+        <td>被弾ダメージ</td>
+        <td class="score-negative">-50p</td>
+      </tr>
+    </table>
     <p>　</p>
-        <p>　</p>
+    <p>　</p>
 
 
-  <h3>ラスボス（niAIコア）</h3>
-<div class="image-container">
-  <img src="./assets/img/dammy.jpg">
-</div>
+    <h3>ラスボス（niAIコア）</h3>
+    <div class="image-container">
+      <img src="./assets/img/dammy.jpg">
+    </div>
     <p>このゲームのラスボスであり、諸悪の根源。</p>
     <p>雑魚敵を召喚するうえ、それらを倒しきらないと本体に攻撃できない。</p>
     <p>弱点に弾を当てると大ダメージを与えられる。</p>
-<table class="credit-table">
-  <tr>
+    <table class="credit-table">
       <tr>
-    <td>強さレベル</td>
-    <td><span class="stars">★★★★★</span></td>
-  </tr>
-    <td>登場ステージ</td>
-    <td>ステージ3</td>
-  </tr>
-  <tr>
-    <td>必要HIT数</td>
-    <td>プレイヤー数　×15回</td>
-  </tr>
-  <tr>
-    <td>獲得スコア</td>
-    <td class="score-positive">10000p　+　残り時間（秒）×50p</td>
-  </tr>
-  <tr>
-    <td>被弾ダメージ</td>
-    <td class="score-negative">-50p</td>
-  </tr>
-</table>
+      <tr>
+        <td>強さレベル</td>
+        <td><span class="stars">★★★★★</span></td>
+      </tr>
+      <td>登場ステージ</td>
+      <td>ステージ3</td>
+      </tr>
+      <tr>
+        <td>必要HIT数</td>
+        <td>？？？</td>
+      </tr>
+      <tr>
+        <td>獲得スコア</td>
+        <td class="score-positive">？？？</td>
+      </tr>
+      <tr>
+        <td>被弾ダメージ</td>
+        <td class="score-negative">？？？</td>
+      </tr>
+    </table>
     <p>　</p>
-        <p>　</p>
+    <p>　</p>
 
 
 
@@ -210,13 +212,14 @@
     <p>&copy; 2025 こうよう祭　2Iクラス展示</p>
   </footer>
 
-    <div data-include="partials/line-banner.html"></div>
+  <div data-include="partials/line-banner.html"></div>
 
   <div class="terminal-background" id="terminal"></div>
   <script src="assets/js/terminal.js"></script>
-  
+
   <script src="./assets/js/line-banner.js"></script>
   <script src="./assets/js/include.js"></script>
   <script src="./assets/js/menu.js"></script>
 </body>
+
 </html>
