Add GitHub Pages workflow for cloud runner

--- a/credit.html
+++ b/credit.html
@@ -35,6 +35,45 @@
               >
             </div>
           </div>
+          <div class="credit-item">
+            <div class="credit-content">
+              <h3 class="credit-title">各種SE</h3>
+              <p class="credit-author">効果音ラボ</p>
+              <a
+                href="https://soundeffect-lab.info/"
+                class="credit-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >配布元サイトへ ›</a
+              >
+            </div>
+          </div>
+          <div class="credit-item">
+            <div class="credit-content">
+              <h3 class="credit-title">各種SE</h3>
+              <p class="credit-author">Springin'</p>
+              <a
+                href="https://www.springin.org/sound-stock/"
+                class="credit-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >配布元サイトへ ›</a
+              >
+            </div>
+          </div>
+          <div class="credit-item">
+            <div class="credit-content">
+              <h3 class="credit-title">各種SE</h3>
+              <p class="credit-author">pixabay</p>
+              <a
+                href="https://pixabay.com/sound-effects/"
+                class="credit-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >配布元サイトへ ›</a
+              >
+            </div>
+          </div>
         </div>
       </section>
       <p>　</p>
@@ -430,7 +469,7 @@
                 <p class="credit-author">FuseFox Design</p>
                 <p class="credit-description">使用箇所: Wiiリモコン装飾</p>
                 <a
-                  href="https://example.com"
+                  href="https://www.printables.com/model/959672-the-photon-wii-zapper"
                   class="credit-link"
                   target="_blank"
                   rel="noopener noreferrer"
