credit.html の更新

--- a/credit.html
+++ b/credit.html
@@ -20,6 +20,8 @@
         <p>　</p>
         <p>　</p>
         <h2>BGM・効果音</h2>
+
+   <div class="credit-list">
 <div class="credit-item">
   <div class="credit-content">
     <h3 class="credit-title">Unknown_Cities</h3>
