Add GitHub Pages workflow for cloud runner

--- a/play.html
+++ b/play.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FOR PLAYERS</title>
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/page/style_play.css">
 </head>
 
 <body>
@@ -18,20 +19,22 @@
     <p>ゲームの遊び方と注意事項について説明しています。</p>
     <p>　</p>
     <h2>遊び方</h2>
-    <p>サンプルテキスト</p>
-    <p>サンプルテキスト</p>
+    <p>このゲームの遊び方です。</p>
     <div class="image-container">
       <img src="./assets/img/dammy.jpg">
     </div>
     <p>　</p>
     <p>　</p>
     <p>　</p>
-    <h2>注意とお願い</h2>
-    <p>サンプルテキスト</p>
-    <p>サンプルテキスト</p>
-    <div class="image-container">
-      <img src="./assets/img/dammy.jpg">
-    </div>
+   <section class="notice-section-compact">
+  <h2>注意とお願い</h2>
+  <div class="notice-container">
+    <p>プレイ中は周りに十分注意し、怪我などに繋がる行為のないようにお願いします。</p>
+    <p>場所の移動などにつきましては係員の指示に従って動いていただくようにお願いします。</p>
+    <p>使用する銃（コントローラー）はトリガー以外の部分を不用意に触らないようにお願いします。</p>
+    <p>ゲームを行うにあたり、皆様の顔の写った写真を使用させていただきます。あらかじめご了承ください。</p>
+  </div>
+</section>
     <p>　</p>
     <p>　</p>
     <p>　</p>
