Add GitHub Pages workflow for cloud runner

--- a/credit.html
+++ b/credit.html
@@ -21,24 +21,36 @@
         <p>　</p>
         <h2>BGM・効果音</h2>
 
-   <div class="credit-list">
-<div class="credit-item">
-  <div class="credit-content">
-    <h3 class="credit-title">Unknown_Cities</h3>
-    <p class="credit-author">PariTune</p>
-    <p class="credit-description">使用箇所: BGM</p>
-    <a href="https://youtu.be/iIER4RjbVtk?si=GLIFySFgr1vX_Gj6" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
-  </div>
-</div>
+        <div class="credit-list">
+          <div class="credit-item">
+            <div class="credit-content">
+              <h3 class="credit-title">Unknown_Cities</h3>
+              <p class="credit-author">PariTune</p>
+              <p class="credit-description">使用箇所: BGM</p>
+              <a
+                href="https://youtu.be/iIER4RjbVtk?si=GLIFySFgr1vX_Gj6"
+                class="credit-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >配布元サイトへ ›</a
+              >
+            </div>
+          </div>
 
-<div class="credit-item">
-  <div class="credit-content">
-    <h3 class="credit-title">"404:フリーズ・コード"</h3>
-    <p class="credit-author">Tak_mfk</p>
-    <p class="credit-description">使用箇所: BGM</p>
-    <a href="https://youtu.be/NrNGkKSOQ50?si=XMFvIaC9CRk9Dvo6" class="credit-link" target="_blank" rel="noopener noreferrer">配布元サイトへ ›</a>
-  </div>
-</div>
+          <div class="credit-item">
+            <div class="credit-content">
+              <h3 class="credit-title">"404:フリーズ・コード"</h3>
+              <p class="credit-author">Tak_mfk</p>
+              <p class="credit-description">使用箇所: BGM</p>
+              <a
+                href="https://youtu.be/NrNGkKSOQ50?si=XMFvIaC9CRk9Dvo6"
+                class="credit-link"
+                target="_blank"
+                rel="noopener noreferrer"
+                >配布元サイトへ ›</a
+              >
+            </div>
+          </div>
           <div class="credit-item">
             <div class="credit-content">
               <h3 class="credit-title">各種SE</h3>
