--- a/story.html
+++ b/story.html
@@ -21,7 +21,7 @@
       </p>
       <!-- 画像単体で表示 -->
       <div class="image-container">
-        <img src="./assets/img/dammy.jpg" />
+        <img src="assets\img\story\server.png" />
       </div>
       <p>
         研究名は「niAI（Neural Imitation
