Add GitHub Pages workflow for cloud runner

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 
     <h1>ABOUT</h1>
     <h2>こうよう祭　2Iクラス展公式サイト</h2>
-    <p>こうよう祭2025の、2Iクラス展公式サイトです。</p>
-    <p>楽しんでいってください！</p>
+    <p>こうよう祭2025の、2Iクラス展公式サイトです。<br>楽しんでいってください！</p>
     <p>　</p>
     <p>　</p>
     <p>　</p>
@@ -49,9 +48,7 @@
     <p>　</p>
 
     <h1>ACCESS</h1>
-    <p>豊田高専と2I教室の場所です。</p>
-
-    <p>詳しくは「ACCESS」ページに写真付きで記載しています。</p>
+    <p>豊田高専と2I教室の場所です。<br>詳しくは「ACCESS」ページに写真付きで記載しています。</p>
 
     <nav class="main-nav">
       <a href="access.html" class="btn">ACCESSページへ</a>
@@ -80,8 +77,7 @@
     <h1>FOR PLAYERS</h1>
     <h2>遊び方と注意事項</h2>
     <p>ゲームの遊び方と注意事項、登場する敵キャラについて説明しています
-      。</p>
-    <p>ハイスコアのコツも書いてあるかも…</p>
+      。<br>ハイスコアのコツも書いてあるかも…</p>
     <nav class="main-nav">
       <a href="play.html" class="btn">FOR PLAYERSページへ</a>
     </nav>
