--- a/play.html
+++ b/play.html
@@ -47,8 +47,7 @@
       <img src="assets\img\enemy\1013zakoenemy_0.png">
     </div>
     <p>最も多く出現する、一番弱い敵。</p>
-    <p>機体の色によって移動パターンが変わるので注意。</p>
-    <p>集団で向かってくるので油断は禁物。</p>
+    <p>機体の色によって移動パターンが変わるので注意。<br>集団で向かってくるので油断は禁物。</p>
     <table class="credit-table">
       <tr>
       <tr>
@@ -77,8 +76,7 @@
     <div class="image-container">
       <img src="assets\img\enemy\1013blueenemy_0.png">
     </div>
-    <p>攻撃するたびに色が変わり、移動パターンも変化。</p>
-    <p>弾を3回当てると撃破できる。</p>
+    <p>攻撃するたびに色が変わり、移動パターンも変化。<br>弾を3回当てると撃破できる。</p>
     <p>雑魚敵より撃破ポイントがやや高い。</p>
     <table class="credit-table">
       <tr>
@@ -109,8 +107,7 @@
     <div class="image-container">
       <img src="assets\img\enemy\1014rareenemy_0.png">
     </div>
-    <p>遠くを高速で飛んでいる敵。金色に光っている。</p>
-    <p>弾を当てるのは難しいが、獲得ポイントも多い。</p>
+    <p>遠くを高速で飛んでいる敵。金色に光っている。<br>弾を当てるのは難しいが、獲得ポイントも多い。</p>
     <p>見つけたら積極的に狙おう。</p>
     <table class="credit-table">
       <tr>
@@ -141,8 +138,7 @@
     <div class="image-container">
       <img src="assets\img\enemy\1013tyuboss_0.png">
     </div>
-    <p>中盤に登場するボス敵。</p>
-    <p>雑魚敵を巨大化したような見た目。なんだか強そうなオーラを放っている。</p>
+    <p>中盤に登場するボス敵。<br>雑魚敵を巨大化したような見た目。なんだか強そうなオーラを放っている。</p>
     <p>突進攻撃に注意。弾を当てて攻撃をキャンセルしよう。</p>
     <table class="credit-table">
       <tr>
@@ -174,8 +170,7 @@
     <div class="image-container">
       <img src="./assets/img/dammy.jpg">
     </div>
-    <p>このゲームのラスボスであり、諸悪の根源。</p>
-    <p>雑魚敵を召喚するうえ、それらを倒しきらないと本体に攻撃できない。</p>
+    <p>このゲームのラスボスであり、諸悪の根源。<br>雑魚敵を召喚するうえ、それらを倒しきらないと本体に攻撃できない。</p>
     <p>弱点に弾を当てると大ダメージを与えられる。</p>
     <table class="credit-table">
       <tr>
