Add GitHub Pages workflow for cloud runner

--- a/story.html
+++ b/story.html
@@ -49,8 +49,7 @@
       <p>　</p>
 
       <h2>立ち上がる「対特殊顔面部隊」</h2>
-      <p>niAIの暴走を止めるべく、ついに特務部隊が結成。</p>
-      <p>その名も「対特殊顔面部隊」。</p>
+      <p>niAIの暴走を止めるべく、ついに特務部隊が結成。<br>その名も「対特殊顔面部隊」。</p>
       <div class="image-container">
         <img src="./assets/img/dammy.jpg" />
       </div>
