Add GitHub Pages workflow for cloud runner

--- a/play.html
+++ b/play.html
@@ -168,7 +168,7 @@
 
     <h3>ラスボス（niAIコア）</h3>
     <div class="image-container">
-      <img src="./assets/img/dammy.jpg">
+      <img src="assets\img\enemy\無題 2025-10-17 13-21-22.png">
     </div>
     <p>このゲームのラスボスであり、諸悪の根源。<br>雑魚敵を召喚するうえ、それらを倒しきらないと本体に攻撃できない。</p>
     <p>弱点に弾を当てると大ダメージを与えられる。</p>
