Add GitHub Pages workflow for cloud runner

--- a/access.html
+++ b/access.html
@@ -32,21 +32,22 @@
 
       <p>　</p>
       <div class="image-container">
-        <img src="./assets/img/dammy.jpg" />
+        <img src="assets\img\access\access1.jpg" />
       </div>
-      <p>校舎内の写真に矢印とかを落書きした画像</p>
+      <p>正門から入り、右側の道へ進んでください</p>
       <div class="image-container">
-        <img src="./assets/img/dammy.jpg" />
+        <img src="assets\img\access\access2.jpg" />
       </div>
-      <p>校舎内の写真に矢印とかを落書きした画像</p>
+      <p>図書館の左の道を直進し、左へ曲がってください</p>
       <div class="image-container">
-        <img src="./assets/img/dammy.jpg" />
+        <img src="assets\img\access\access3.jpg" />
       </div>
-      <p>校舎内の写真に矢印とかを落書きした画像</p>
+      <p>情報科棟の建物が見えるまで直進してください</p>
       <div class="image-container">
-        <img src="./assets/img/dammy.jpg" />
+        <img src="assets\img\access\access4.jpg" />
       </div>
-      <p>校舎内の写真に矢印とかを落書きした画像</p>
+      <p>右側に見える建物に入り、2階が会場です
+      </p>
     </main>
 
     <footer>
