--- a/play.html
+++ b/play.html
@@ -19,7 +19,7 @@
     <p>ゲームの遊び方と注意事項について説明しています。</p>
     <p>　</p>
     <h2>遊び方</h2>
-    <p>このゲームの遊び方です。</p>
+    <p>このゲームの遊び方を解説した動画です</p>
     <div class="image-container">
       <img src="./assets/img/dammy.jpg">
     </div>
