Add GitHub Pages workflow for cloud runner

--- a/credit.html
+++ b/credit.html
@@ -55,6 +55,7 @@
             <div class="credit-content">
               <h3 class="credit-title">各種SE</h3>
               <p class="credit-author">効果音ラボ</p>
+              <p class="credit-description">使用箇所: 随所</p>
               <a
                 href="https://soundeffect-lab.info/"
                 class="credit-link"
@@ -68,6 +69,7 @@
             <div class="credit-content">
               <h3 class="credit-title">各種SE</h3>
               <p class="credit-author">Springin'</p>
+              <p class="credit-description">使用箇所: 随所</p>
               <a
                 href="https://www.springin.org/sound-stock/"
                 class="credit-link"
@@ -81,6 +83,7 @@
             <div class="credit-content">
               <h3 class="credit-title">各種SE</h3>
               <p class="credit-author">pixabay</p>
+              <p class="credit-description">使用箇所: 随所</p>
               <a
                 href="https://pixabay.com/sound-effects/"
                 class="credit-link"
