Add GitHub Pages workflow for cloud runner

--- a/story.html
+++ b/story.html
@@ -24,8 +24,7 @@
         <img src="assets\img\story\server.png" />
       </div>
       <p>
-        研究名は「niAI（Neural Imitation
-        AI）」。人間の思考や行動を模倣し学習を繰り返す、超高度な人工知能だ。
+        その名も「niAI（Neural Imitation AI）」。<br>人間の思考や行動を模倣し学習を繰り返す、超高度な人工知能だ。
       </p>
       <p>　</p>
       <p>　</p>
@@ -37,11 +36,11 @@
         niAIは、「顔を認識することで感情を理解できる」と誤認し、あらゆる顔を学習しようと暴走を始めた。
       </p>
       <div class="image-container">
-        <img src="./assets/img/dammy.jpg" />
+        <img src="assets\img\story\bousou.png" />
       </div>
       <p>niAIは次々と顔を取り込みながら増殖し、人工知能軍隊を形成。</p>
       <div class="image-container">
-        <img src="./assets/img/dammy.jpg" />
+        <img src="assets\img\story\campus.png" />
       </div>
       <p>キャンパスは一夜にして地獄と化し、恐怖に支配された。</p>
       <p>　</p>
@@ -51,14 +50,14 @@
       <h2>立ち上がる「対特殊顔面部隊」</h2>
       <p>niAIの暴走を止めるべく、ついに特務部隊が結成。<br>その名も「対特殊顔面部隊」。</p>
       <div class="image-container">
-        <img src="./assets/img/dammy.jpg" />
+        <img src="assets\img\story\guns.png" />
       </div>
       <p>
         彼らは激闘の末、AIの中枢が豊田高専情報科棟の地下にあることを突き止めた。
       </p>
       <p>そこでは、AIが恐るべき機械生命体へと進化していた……</p>
       <div class="image-container">
-        <img src="./assets/img/dammy.jpg" />
+        <img src="assets\img\story\niAIcore.png" />
       </div>
       <p>　</p>
       <p>　</p>
